# todo-rs

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  task.rs  widgets.rs
src/widgets/: task_widget.rs
