[package]
name = "todo-rs"
version = "0.1.0"
authors = ["m-saif-1280 <msaifrehman10@proton.me>"]
edition = "2024"
description = "A minimialist TUI todo app"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
tui-widget-list = "0.15.3"

[dependencies.ratatui]
version = "0.30.2"
features = ["all-widgets", "crossterm", "layout-cache", "macros", "std", "underline-color"]
